applications/terra-proplus-production/kubernetes/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: terrafusion-production
  labels:
    name: terrafusion-production
    environment: production
