applications/terra-proplus-production/kubernetes/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: terrafusion-api
  namespace: terrafusion
  labels:
    app: terrafusion-api
    environment: production
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '5000'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: terrafusion-api
